--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "homepage_url": "http://github.com/secretdataz/LolHelperTHUA/",
-  "name": "Garena LoL Assist UA Faker",
+  "name": "LoL Assist Browser",
   "description": "การีน่ามึงบล็อคทำไมฮัลโหลลล",
   "version": "0.1.1",
 
