--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "homepage_url": "http://github.com/secretdataz/LolHelperTHUA/",
   "name": "LoL Assist Browser",
   "description": "การีน่ามึงบล็อคทำไมฮัลโหลลล",
-  "version": "0.1.1",
+  "version": "0.1.5",
 
   "browser_action": {
     "default_icon": "icon.png",
@@ -13,6 +13,15 @@
     "persistent": true,
     "scripts": ["background.js"]
   },
+  "content_scripts": [
+    {
+      "matches": [
+        "*://lolhelperth.garenanow.com/*"
+      ],
+      "css": ["style.css"],
+      "run_at": "document_start"
+    }
+  ],
   "icons": { "16": "icon.png",
           "128": "Teemo.png" },
   "permissions": [
