Added support for SG/MY, PH, VN, ID region

--- a/manifest.json
+++ b/manifest.json
@@ -27,6 +27,10 @@
   "permissions": [
     "webRequest",
     "webRequestBlocking",
-    "*://lolhelperth.garenanow.com/*"
+    "*://lolhelperth.garenanow.com/*",
+    "*://lolhelperph.garenanow.com/*",
+    "*://lolhelpersg.garenanow.com/*",
+    "*://lolhelpervn.garenanow.com/*",
+    "*://lolhelperid.garenanow.com/*"
   ]
 }
