--- a/manifest.json
+++ b/manifest.json
@@ -31,6 +31,7 @@
   "permissions": [
     "webRequest",
     "webRequestBlocking",
+    "storage",
     "*://lolhelperth.garenanow.com/*",
     "*://lolhelperph.garenanow.com/*",
     "*://lolhelpersg.garenanow.com/*",
